--- a/CanvasApp/Src/Screen1.fx.yaml
+++ b/CanvasApp/Src/Screen1.fx.yaml
@@ -10,3 +10,9 @@ Screen1 As screen:
         Y: =40
         ZIndex: =1
 
+    Button1 As button:
+        Text: ="Navigation"
+        X: =212
+        Y: =376
+        ZIndex: =2
+
